@@ -2,6 +2,7 @@
 
 	* Use a distinct status string when redirecting from the RealURL
 	* Fixed bug #45398: getLanguageVar() returns 0 instead of sys_language_uid (thanks to Andreas Beutel)
+	* Fixed bug #41515: Wrong value applied for GET var when using value default (thanks to Helmut Hummel)
 
 2013-05-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
